<resources>
  <string name="app_name">ProjectHelper2</string>
  <string name="title_quote">QUOTE</string>
  <string name="title_invoice">INVOICE</string>
  <string name="title_job">JOB</string>
  <string name="date_invoiced">Date Invoiced</string>
  <string name="invoice_id">Invoice ID</string>
  <string name="job_id">Job ID</string>
  <string name="job_address">Job Address</string>
  <string name="job_list">Job List</string>
  <string name="job_date">Job Date</string>
  <string name="invoice_id_invoice">Invoice Id</string>
  <string name="invoice_job_description">Job Description</string>
  <string name="invoice_job_price">Price</string>
  <string name="invoice_price">Invoice Price</string>
  <string name="invoice_amount">Amount</string>
  <string name="invoice_contact">Contact</string>
  <string name="amount_format">%,.2f</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="add_amount">Amount</string>
  <string name="add_date">Date</string>
  <string name="add_address">Address</string>
  <string name="add_description">Description</string>
  <string name="add_fields">Add Fields</string>
  <string name="enter_quote_id">Enter Quote Id</string>
  <string name="enter_quote_number">Enter Quote Number</string>
  <string name="add_contact">Add Contact</string>
  <string name="enter_job_id">Job Id</string>
  <string name="enter_invoice_id">Enter Invoice Id</string>
  <string name="date_completed">Date Completed</string>
  <string name="enter_price">Enter Price</string>
  <string name="job_number">Job Number</string>
  <string name="enter_date">Enter Date</string>
  <string name="enter_address">Enter Address</string>


</resources>
