<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".view.QuoteFragment">

  <android.support.design.widget.TextInputLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:hintEnabled="true"
    app:hintAnimationEnabled="true"
    android:text="@string/add_fields">

  <EditText
    android:id="@+id/quote_id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif"
    android:textStyle="bold"
    android:inputType="number"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toTopOf="@id/quote_number"
    />

  <EditText
    android:id="@+id/quote_number"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif"
    android:textStyle="bold"
    android:inputType="number"
    app:layout_constraintLeft_toRightOf="@id/quote_id"
    app:layout_constraintBottom_toTopOf="@id/contact"/>

  <Text
    android:id="@+id/contact"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif"
    android:textStyle="bold"
    android:inputType="textPersonName"
    app:layout_constraintBottom_toTopOf="@id/amount"

    />


  <android.support.design.widget.TextInputEditText
    android:id="@+id/amount"
    android:hint="@string/add_amount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif"
    android:textStyle="bold"
    android:inputType="numberDecimal"
    app:layout_constraintBottom_toTopOf="@id/event"
   />

  <android.support.design.widget.TextInputEditText
    android:id="@+id/event"
    android:hint="@string/add_date"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif"
    android:textStyle="bold"
    android:inputType="date"
    app:layout_constraintBottom_toTopOf="@id/address"

    />

  <android.support.design.widget.TextInputEditText
    android:id="@+id/address"
    android:hint="@string/add_address"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif"
    android:textStyle="bold"
    android:inputType="textPostalAddress"
    app:layout_constraintBottom_toTopOf="@id/description"
    />

  <android.support.design.widget.TextInputEditText
    android:id="@+id/description"
    android:hint="@string/add_description"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif"
    android:textStyle="bold"
    android:inputType="textCapSentences|textAutoCorrect"
    app:layout_constraintTop_toBottomOf="@id/quote_id"
    />

</android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>