<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".view.InvoiceFragment">

  <android.support.design.widget.TextInputLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:id="@+id/invoice_id_layout"
    app:hintEnabled="true"
    android:hint="@string/enter_invoice_id"
    app:hintAnimationEnabled="true"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/job_id_layout"
    >

    <android.support.design.widget.TextInputEditText
      android:id="@+id/invoice_id"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif"
      android:textStyle="bold"
      android:inputType="number"
      />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:id="@+id/job_id_layout"
    app:hintEnabled="true"
    app:hintAnimationEnabled="true"
    android:hint="@+id/job_number"
    app:layout_constraintStart_toEndOf="@id/invoice_id_layout"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent">


    <android.support.design.widget.TextInputEditText
      android:id="@+id/job_id"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif"
      android:textStyle="bold"
      android:inputType="number"
      />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/input_date_completed_layout"
    app:hintEnabled="true"
    android:hint="@string/date_completed"
    app:hintAnimationEnabled="true"
    app:layout_constraintTop_toBottomOf="@id/invoice_id_layout"

    >

    <android.support.design.widget.TextInputEditText
      android:id="@+id/date_completed"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif"
      android:textStyle="bold"
      android:inputType="date"

      />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:id="@+id/input_invoice_price_layout"
    app:hintEnabled="true"
    app:hintAnimationEnabled="true"
    android:hint="@string/enter_price"
    app:layout_constraintTop_toBottomOf="@id/input_contact_layout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/input_date_invoiced_layout">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/invoice_price"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif"
      android:textStyle="bold"
      android:inputType="numberDecimal"
      />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:id="@+id/input_date_invoiced_layout"
    app:hintEnabled="true"
    app:hintAnimationEnabled="true"
    android:hint="@string/add_date"
    app:layout_constraintTop_toBottomOf="@id/input_invoice_price_layout"
    app:layout_constraintStart_toEndOf="@id/input_amount_layout"
    app:layout_constraintEnd_toStartOf="@+id/input_address_layout">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/date_invoiced"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif"
      android:textStyle="bold"
      android:inputType="date"
      />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:hintEnabled="true"
    android:hint="@string/add_address"
    app:hintAnimationEnabled="true"
    android:id="@+id/input_address_layout"
    app:layout_constraintTop_toBottomOf="@id/input_contact_layout"
    app:layout_constraintStart_toEndOf="@id/input_date_layout"
    app:layout_constraintEnd_toEndOf="parent"
    >
    <android.support.design.widget.TextInputEditText
      android:id="@+id/address"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif"
      android:textStyle="bold"
      android:inputType="textPostalAddress"
      />

  </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>